tests/ui/self/dispatch-from-dyn-zst-transmute-zst-nonzst.stderr
error[E0378]: implementing the `DispatchFromDyn` trait requires multiple coercions
  --> $DIR/dispatch-from-dyn-zst-transmute-zst-nonzst.rs:17:1
   |
LL | / impl<T, U> DispatchFromDyn<Dispatchable<U, i32>> for Dispatchable<T, ()>
LL | |
LL | | where
LL | |     T: Unsize<U> + ?Sized,
LL | |     U: ?Sized,
   | |______________^
   |
   = note: the trait `DispatchFromDyn` may only be implemented for a coercion between structures with a single field being coerced
   = note: currently, 2 fields need coercions: `_ptr` (`Box<T>` to `Box<U>`), `z` (`()` to `i32`)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0378`.
